src/test/deca/context/invalid/non_provided/instanceof2.deca
// Description:
//    Exemple utilisant l'instruction d'affectation 
//    avec des héritages
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 27/01/2020

{
    Object objet;

    if(objet instanceof float) { // doit déclencher une erreur
        print("Erreur");
    }
}